fix search index z-index bug

--- a/src/app/header/header.component.scss
+++ b/src/app/header/header.component.scss
@@ -152,6 +152,7 @@
   background: white;
   border-radius: 1.875rem 0 1.875rem 1.875rem; 
   box-shadow: 0px 2px 10px 0px rgba(0, 0, 0, 0.08);
+  z-index: 1;
 
   .members-list-scroll-box {
     display: flex;
